--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.16.0",
+    "@gltf-transform/cli": "^3.10.1",
     "@types/node": "^20.12.7",
     "eslint": "^9.1.1",
     "typescript": "^5.2.2",
