--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@orillusion/core": "^0.7.2",
-    "@orillusion/stats": "^0.2.2"
+    "@orillusion/stats": "^0.2.2",
+    "@tweenjs/tween.js": "^23.1.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.16.0",
